; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonmemmapmemalign.c_memalign_alloc.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonmemmapmemalign.c_memalign_alloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @memalign_alloc(i64 %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8**, align 8
  %7 = alloca i64, align 8
  %8 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i64 %1, i64* %5, align 8
  store i8** null, i8*** %6, align 8
  store i64 0, i64* %7, align 8
  %9 = load i64, i64* %4, align 8
  %10 = load i64, i64* %5, align 8
  %11 = add i64 %9, %10
  %12 = add i64 %11, 8
  %13 = call i64 @malloc(i64 %12)
  %14 = inttoptr i64 %13 to i8*
  store i8* %14, i8** %8, align 8
  %15 = load i8*, i8** %8, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %35

18:                                               ; preds = %2
  %19 = load i8*, i8** %8, align 8
  %20 = ptrtoint i8* %19 to i64
  %21 = add i64 %20, 8
  %22 = load i64, i64* %4, align 8
  %23 = add i64 %21, %22
  %24 = load i64, i64* %4, align 8
  %25 = sub i64 %24, 1
  %26 = xor i64 %25, -1
  %27 = and i64 %23, %26
  store i64 %27, i64* %7, align 8
  %28 = load i64, i64* %7, align 8
  %29 = inttoptr i64 %28 to i8**
  store i8** %29, i8*** %6, align 8
  %30 = load i8*, i8** %8, align 8
  %31 = load i8**, i8*** %6, align 8
  %32 = getelementptr inbounds i8*, i8** %31, i64 -1
  store i8* %30, i8** %32, align 8
  %33 = load i64, i64* %7, align 8
  %34 = inttoptr i64 %33 to i8*
  store i8* %34, i8** %3, align 8
  br label %35

35:                                               ; preds = %18, %17
  %36 = load i8*, i8** %3, align 8
  ret i8* %36
}

declare dso_local i64 @malloc(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
